--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model IndexModel
 @{    
-    ViewData["Title"] = "Home page";
+    ViewData["Title"] = "Genile Solution Services";
 }
 
 <div class="text-center">
