--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -6,7 +6,7 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome to Genile!</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <p>Please Join <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
     <hr />
     <div>Host operating system: @Model.OSVersion</div>
 </div>
